zaimplementowany View Manager i Controler UI

--- a/css/reset.css
+++ b/css/reset.css
@@ -28,7 +28,7 @@ a {
 }
 
 /* Formularze i przyciski */
-input,
+/* input,
 button,
 textarea,
 select {
@@ -36,7 +36,7 @@ select {
   border: none;
   outline: none;
   background: none;
-}
+} */
 
 /* Button jako pointer */
 button {
