--- a/css/forget.css
+++ b/css/forget.css
@@ -17,7 +17,7 @@
     margin-bottom:1rem ;
     color:var(--text-primary);
 }
-.forget-label{
+.forget-label, .labs{
     position: absolute;
     transition: all 0.8s ease;
      
