--- a/css/login.css
+++ b/css/login.css
@@ -28,22 +28,58 @@
     position: relative;
     flex-wrap: wrap;
     justify-content: center;
-    border: solid 0.5px var(--glass-border);
     width: 22rem;
     height: 22rem;
     border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(122, 121, 121, 0.5);
     background-color: var(--glass-border);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     text-align: center;
-    color: rgb(0, 0, 0);
+    overflow: hidden;
+    z-index: 1;
+    border: solid 0.5px var(--glass-border);
+    animation: glow 15s ease-in-out infinite;
 }
+
+
+@keyframes glow {
+  0%,100% {
+    box-shadow: 0px 0px 0px 0px var(--background-dot);
+  }
+  12.5% {
+    box-shadow: -2px 2px 5px 3px  var(--background-dot);
+  }
+  25% {
+    box-shadow: 0px 0px 5px 3px  var(--background-dot);
+}
+37.5%{
+    box-shadow: 2px -2px 5px 3px  var(--background-dot);
+}
+50%{
+    box-shadow: 0px 0px 5px 3px  var(--background-dot);
+}
+62.5%{
+    box-shadow: 3px 0px 5px 3px  var(--background-dot);
+}
+75% {
+    box-shadow: 0px -0px 5px 3px var(--background-dot);
+  }
+
+  85% {
+     box-shadow: 2px 5px 5px 3px  var(--background-dot);
+  }
+  95% {
+    box-shadow: 0px -2px 0px 0px var(--background-dot);
+  }
+}
+
 .login{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 20rem;
+    overflow: hidden;
+    z-index: -10;
     position: relative;
     color: var(--text-muted);
 }
@@ -60,8 +96,6 @@ input{
     transform: scale(1.1);
 }
     
-    
-
 .log-label, .pass-label{
     position: absolute;
     transition: all 0.8s ease;
@@ -82,11 +116,7 @@ opacity: 0;
 .pass-input{
     margin-bottom: .5rem;
 }
-
-
-    
-
-
+   
 .login-btn{
     margin: .5rem;
     padding: 0.5rem;
@@ -176,9 +206,24 @@ footer{
     position: relative;
     height: 50px;
     width: 50px;
-    
     margin-bottom: .5rem;
  }
+    
+   
+    
+  
+ 
+    
+    
+
+
+    
+
+
+
+    
+
+
 
 
 
