--- a/css/forget.css
+++ b/css/forget.css
@@ -7,8 +7,11 @@
 .forget-container{
     align-items: center;
     flex-direction: row;
-    
 }
+.forget-container p {
+    top: 1rem;
+}
+    
 #forget-username{
     margin: 1rem 0 1rem 0;
 }
