--- a/css/login.css
+++ b/css/login.css
@@ -21,6 +21,7 @@
   --btn-accent: #38BDF8;
   --btn-danger: #EF4444;
   --btn-possitive: #0ea70e;
+  --inside-btn-bg: rgba(17, 39, 41, 0.08);
 
 }
 
