--- a/css/layout.css
+++ b/css/layout.css
@@ -15,12 +15,9 @@ body{
     flex-wrap: wrap;
     min-height: 100vh;
     width: 100%;
-    background-image: url(/To-do-App/assets/turkus.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    
      
-    background-color: #000000;
+    background-color:#1d1c1c ;
     text-align: center;
     border: solid 0.5px var(--glass-border);
 }
@@ -28,14 +25,14 @@ body{
     display: flex;
     width: 100vw;
     flex-wrap: wrap;
-    height: 15rem;
-    border-radius: 0 0 12px 12px;
-    background-color: var(--glass-border);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    text-align: center;
+    height: 10rem;
+    border-radius: 0 0 20px 20px;
+    background-color: var(--sction-bg);
     
+    text-align: center;
+    border-bottom: 1px solid var(--glass-border);
     flex-direction: row-reverse;
+    
     
     
 } 
@@ -50,7 +47,7 @@ body{
     color: var(--text-secondary);
     outline: none;
     border: none;
-    margin: .5rem;
+    margin: .5rem 1rem .5rem 0;
     cursor: pointer;
     position: relative;
 }
@@ -58,14 +55,16 @@ body{
     display: flex;
     flex-direction: row-reverse;
     height:auto;
+    
     align-self:self-start ;
 }
 .user-stuff{
     position: absolute;
     align-self: flex-start;
     height: auto;
-    top:35%;
+    top: 5%;
     left: 45%;
+    z-index: 5;  
 }
 .date {
     position:relative;
@@ -91,7 +90,7 @@ body{
 }
 .dropdown{
     position:absolute;
-   background-color: var(--glass-bg);
+    background-color: var(--glass-bg);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 8px;
@@ -119,9 +118,74 @@ body{
     cursor: pointer;
     position: relative;
     background-color: transparent;
-     align-self:self-end ;
+    align-self:self-end ;
     height: auto;
 }
+.list-section, .task-list {
+    color: var(--text-primary);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    right: .15rem;
+}
+.task-item {
+    background-color: var(--glass-bg);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: .5px solid var(--glass-border);
+    border-radius: 8px;
+    width: 20rem;
+    height: 5rem;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+    position: relative;
+    margin-bottom: .8rem;
+   
+}
+.list-btns {
+    align-self:center ;
+    height: 1rem;
+    width: 1rem;
+    color: var(--text-secondary);
+    outline: none;
+    border: none;
+    background-color: transparent;
+    margin-left: .5rem;
+    cursor: pointer;
+}
+.task-text {
+    align-self:center ;
+    height: auto;
+    display: flex;
+}
+.task-date {
+     align-self:center ;
+    height: auto;
+    font-size: 10px;
+}
+.item-btn-container{
+    display: flex;
+    height: 100%;
+    width: 30%;
+    position: relative;
+    justify-content: flex-end;
+}
+.delete-btn{
+    margin-top: .5rem;
+    align-self:self-start
+}
+.title-and-date{
+    margin: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+    
+
     
 
 
