--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,8 @@
   --glass-border: rgba(255, 255, 255, 0.1);
   --glass-shadow: rgba(0, 0, 0, 0.3);
   --background-dot: #6BCDCE;
+  /* sekcje */
+  --sction-bg: #212224;
 
   /* TEKST */
   --text-primary: #F8FAFC;
