--- a/css/layout.css
+++ b/css/layout.css
@@ -1,12 +1,12 @@
 :root {
   /*  Podstawowe kolory */
   --color-bg: #0d0d0d; /* Tło główne */
-  --color-bg-soft: #161616; /* Karty, modale */
+  --color-bg-soft: #2c2b2b; /* Karty, modale */
   --color-glass-bg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
   --color-text-primary: #ffffff;
   --color-text-secondary: #aaaaaa;
   --color-divider: rgba(255, 255, 255, 0.07);
-
+  --color-cards-bg: linear-gradient(120deg,rgba(26, 31, 41, 1) 64%, rgba(107, 205, 206, 1) 95%, rgba(107, 205, 206, 1) 86%);
   /*  Akcenty */
   --color-accent: #6BCDCE;
   --color-accent-light: #9BE5EC;
@@ -44,23 +44,26 @@ body{
     flex-wrap: wrap;
     min-height: 100vh;
     width: 100%;
+    background: #0D0D0D;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%230D0D0D' stroke-width='0.7' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23262626' href='%23s' y='2'/%3E%3Cuse fill='%23262626' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23353535' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23353535' href='%23s'/%3E%3Cuse fill='%23404040' href='%23s' x='2'/%3E%3Cuse fill='%23404040' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23525252'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D0D0D'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23595959'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
     
-     
-    background-color:#1d1c1c ;
     text-align: center;
     border: solid 0.5px var(--glass-border);
 }
- #bg {
+ #view-standard{
     display: flex;
     width: 100vw;
     flex-wrap: wrap;
     height: 10rem;
-    border-radius: 0 0 20px 20px;
-    background-color: var(--sction-bg);
-    
     text-align: center;
-    border-bottom: 1px solid var(--glass-border);
     flex-direction: row-reverse;
+    justify-content: space-between;
+   
+    
+    
+    
     
     
     
@@ -76,17 +79,55 @@ body{
     color: var(--text-secondary);
     outline: none;
     border: none;
-    margin: .5rem 1rem .5rem 0;
+    margin-left: .3rem;
     cursor: pointer;
     position: relative;
+}
+.search-toggle{
+    margin-top: .3rem;
 }
 .user-menu{
     display: flex;
     flex-direction: row-reverse;
-    height:auto;
-    
+    position: relative;
+    height: auto;
+    width: 4rem;
+    margin: .5rem;
+    background: var(--color-bg-soft);
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
     align-self:self-start ;
+    
 }
+.menu-btns{
+    display: flex;
+    margin: .5rem .2rem 0 .2rem;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.filter-sort{
+    display: flex;
+    align-items: flex-end;
+    height: auto;
+    
+    width: 4rem;
+    margin: .5rem;
+    background: var(--color-bg-soft);
+    border-radius: 5px;
+}
+.filter-toggle{
+    margin-top: .3rem;
+    width: 1.5rem;
+    height: 1rem;
+}
+.toggle-filter{
+    height: auto;
+   
+    
+    
+}
+
 .user-stuff{
     position: absolute;
     align-self: flex-start;
@@ -95,23 +136,12 @@ body{
     left: 45%;
     z-index: 5;  
 }
-.date {
-    position:relative;
-    display: flex;
-    align-items: flex-end;
-    align-self:self-end ;
-    height: auto;
-    right: 13rem;
-    margin: 1rem;
-    color: var(--text-secondary);
-}
-.date-filter-sort{
-    display: flex;
-    position: absolute;
-    align-items: center;
-    align-self:self-end ;
-    height: auto;
-}
+
+
+    
+   
+    
+    
 .search-input{
     position:absolute;
     left: 28%;
