--- a/css/buttons.css
+++ b/css/buttons.css
@@ -15,6 +15,24 @@
     cursor: pointer;
     position: relative;
 }
+.carusel-btn{
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: var(--text-secondary);
+    display: flex;
+    flex-direction: column;
+}
+.task-acc-btn{
+    background-color: transparent;
+    width: 1rem;
+    height: 1rem;
+    color: var(--text-secondary);
+    outline: none;
+    border: none;
+}
+
+    
 #user-menu-btn{
     width: 1rem;
     height: 1rem;
@@ -38,7 +56,7 @@
 }
 .menu-btns{
     display: flex;
-    margin: .5rem .2rem 0 .2rem;
+    margin: 0 1rem 0 .5rem;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -66,15 +84,24 @@
     position: relative;
     height: auto;
     width: 4rem;
-    margin: .5rem;
+    margin: .5rem 0 0 .5rem;
     background: var(--color-bg-soft);
     align-items: center;
     justify-content: center;
+    padding: .3rem 0 .3rem 0;
     border-radius: 5px;
     align-self:self-start ;
 }
 .user-icon{
      color: var(--text-secondary);
+     display: flex;
+     height: auto;
+     flex-direction: row-reverse;
+     align-items: center;
+}
+.user-portrait{
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 
