--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 :root {
   /*  Podstawowe kolory */
   --color-bg: #0d0d0d; /* Tło główne */
-  --color-bg-soft: #2c2b2b; /* Karty, modale */
+  --color-bg-soft: #1C1C1E; /* Karty, modale */
   --color-glass-bg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
   --color-text-primary: #ffffff;
   --color-text-secondary: #aaaaaa;
@@ -10,6 +10,7 @@
   /*  Akcenty */
   --color-accent: #6BCDCE;
   --color-accent-light: #9BE5EC;
+  --color-border-task: rgba(107, 106, 106, 0.1);
 
   /*  Statusy */
   --color-done: #5ef3a3;
@@ -20,6 +21,7 @@
   --color-button-hover: rgba(255, 255, 255, 0.05);
   --color-input-border: rgba(255, 255, 255, 0.15);
   --color-scrollbar: rgba(255, 255, 255, 0.1);
+  --color-btns:#2A2A2C;
 
   /*  Efekt glass */
   --glass-blur: blur(16px);
@@ -44,26 +46,36 @@ body{
     flex-wrap: wrap;
     min-height: 100vh;
     width: 100%;
-    background: #0D0D0D;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%230D0D0D' stroke-width='0.7' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23262626' href='%23s' y='2'/%3E%3Cuse fill='%23262626' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23353535' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23353535' href='%23s'/%3E%3Cuse fill='%23404040' href='%23s' x='2'/%3E%3Cuse fill='%23404040' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23525252'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D0D0D'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23595959'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    
+    background: #0E0E0E;
+    overflow: hidden;
     text-align: center;
     border: solid 0.5px var(--glass-border);
+    scrollbar-width: none;           
+    -ms-overflow-style: none;  
+}
+.apk-screen::-webkit-scrollbar{
+    display: none;
 }
  #view-header{
     display: flex;
     width: 100vw;
-    flex-wrap: wrap;
     height: 10rem;
     text-align: center;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: #0D0D0D;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect stroke='%230D0D0D' stroke-width='0.8' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cuse fill='%23262626' href='%23s' y='2'/%3E%3Cuse fill='%23262626' href='%23s' x='1' y='2'/%3E%3Cuse fill='%23353535' href='%23s' x='2' y='2'/%3E%3Cuse fill='%23353535' href='%23s'/%3E%3Cuse fill='%23404040' href='%23s' x='2'/%3E%3Cuse fill='%23404040' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23494949'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%23525252'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%230D0D0D'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg fill='%23595959'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(50) translate(-980 -735)'%3E%3Cg fill='%236BCDCE'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
 }
+   
 .separator{
     position: absolute;
-    top: 12rem;
+    top: 11rem;
+    
+    width: 100%;
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -78,8 +90,12 @@ body{
     padding-inline: 16px;
     align-items: flex-end;
     width: 7rem;
-    
+    scrollbar-width: none;
 }
+.carousel-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
 .carousel{
     display: flex;
     
@@ -137,6 +153,19 @@ body{
     top: 2rem;
     left: .2rem;
 }
+.list-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+}
+.list-box::-webkit-scrollbar{
+    display: none;
+}
 
 .list-section, .task-list {
     color: var(--text-primary);
@@ -147,7 +176,10 @@ body{
     right: .15rem;
 }
 .tasks{
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
+    line-height: 1.5;
+    font-size: 18px;
+    font-weight: 600;
 }
 .list-section {
     margin-top: 5rem;
@@ -155,7 +187,7 @@ body{
     
 .task-item {
     background: var(--color-bg-soft);
-    border: .5px solid var(--color-accent-light);
+    border: .5px solid var(--glass-border);
     border-radius: 8px;
     width: 20rem;
     min-height: 2rem;
@@ -164,7 +196,8 @@ body{
     align-content: center;
     flex-wrap: wrap;
     position: relative;
-    margin-bottom: .8rem;
+    margin-bottom: 1.3rem;
+    scroll-snap-align: start;
    
 }
 .list-btns {
@@ -184,10 +217,14 @@ body{
     align-self:center ;
     height: auto;
     display: flex;
+     font-size: 17px;
+    font-weight: 600;
 }
+
+    
 .task-group::after{
     content: "";
-    border-right: solid .5px var(--color-accent);
+    border-right: solid .5px var(--glass-border);
     height: 80%;
     margin-left: .4rem;
     margin-right: .4rem;
@@ -197,18 +234,20 @@ body{
     margin-top: 1rem;
     color: var(--color-warning);
     font-size: 10px;
+    font-weight: 400;
 }
 .task-date::after{
     content: "";
-    border-right: solid .5px var(--color-accent);
+    border-right: solid .5px var(--glass-border);
     height: 80%;
     margin-left: .4rem;
     margin-right: .2rem;
 }
 .task-group{
-     margin-top: 1rem;
+    margin-top: 1rem;
     color: var(--text-secondary);
     font-size: 10px;
+    font-weight: 500;
 }
 .item-container{
     display: flex;
@@ -216,9 +255,13 @@ body{
     flex-direction: column;
     position: relative;
 }
+.item-container p {
+    font-size: 12px;
+    font-weight: 400;
+}
 .item-container::after{
     content: "";
-    border-bottom: solid .5px var(--color-accent);
+    border-bottom: solid .5px var(--glass-border);
     width: 100%;
     margin-top: .5rem;
     
@@ -229,7 +272,7 @@ body{
     
 }
 .title-and-acrdon{
-    margin: .8rem .5rem .5rem 1.5rem;
+    margin: .8rem .5rem .5rem 1rem;
     display: flex;
     
     width: 100%;
@@ -238,7 +281,8 @@ body{
     
 }
 .task-details{
-    font-size: 10px;
+    
+    text-align: start;
 }
 .task-btn-container{
     display: flex;
