--- a/css/layout.css
+++ b/css/layout.css
@@ -384,6 +384,9 @@ a {
     display: flex;
     position: absolute;
     flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+    align-items: center;
     color: var(--color-text-secondary);
     border: 1px solid var(--color-glass-bg);
     height: 20rem;
@@ -400,10 +403,69 @@ a {
     display: flex;
     width: 90%;
     height: 100%;
+    flex-direction: column;
+    border-radius: 10px;
+    order: solid 0.5px var(--glass-border);
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    background-color: var(--color-hamburger);
+    box-shadow: 2px 3px 15px var(--color-divider);
+  }
+  .task-modal-cont{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 90%;
+    align-items: center;
+  }
+  .task-modal-cont span{
+    margin-top: 1rem;
+  }
+  .task-discription{
+    width: 90%;
+    height: 50%;
+    position: relative;
+    background: transparent;
+    border:none; 
+    border: .5px solid var(--text-muted);
+    outline: none;
+    border-radius: 5px;
+    color: var(--color-text-secondary);
+    margin-left: 1rem;
+  }
+  .task-discription::placeholder{
+    font-size: 20px;
+    display: flex;
+    margin: 1rem 0 0 1rem;
+    transition: all 0.8s ease;
+  }
+  .task-discription:focus::placeholder{
+    transform: translateX(5rem);
+    opacity: 0;
+  }
+  
+    
+  
+  .task-title{
+    margin-left: 1rem;
+    color: var(--color-text-secondary);
+
+  }
+.task-title::placeholder{
+  transition: all 0.8s ease;
+}
+.task-title:focus::placeholder{
+   transform: translateX(5rem);
+  opacity: 0;
+}
+.tag-carusel-container{
+  display: flex;
+  flex-direction: row;
+}
     
 
 
 
-}
     
     
