--- a/css/buttons.css
+++ b/css/buttons.css
@@ -45,6 +45,23 @@
     outline: none;
     border: none;
 }
+.node-acc-btn{
+    
+    background-color: transparent;
+    width: 1rem;
+    height: 1rem;
+    color: var(--text-secondary);
+    outline: none;
+    border: none;
+}
+.roud-btns{
+    background-color: transparent;
+    width: 1.2rem;
+    height: 1.2rem;
+    color: var(--text-secondary);
+    outline: none;
+    border: none;
+}
 
     
 
