--- a/css/animations.css
+++ b/css/animations.css
@@ -1,5 +1,9 @@
 
-@keyframes spin-border {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  to{
+    --angle: 360deg;
+  }
 }
