--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -4,13 +4,15 @@
   color: var(--text-primary);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
   position: relative;
 }
 .roadmap-list {
-  
-  padding: 2rem;
+  gap: 2rem;
+  padding: 1.5rem;
 }
+
+  
 .roadmap-section {
   flex-grow: 1;
   height: 100%;
@@ -18,11 +20,16 @@
   flex-direction: column;
   justify-content: flex-end;
   margin-top: 5rem;
+  
 }
 .title-roudmap{
-  padding: .5rem 0 .5rem 0;
+  margin: .5rem .5rem .2rem 1.4rem;
   display: flex;
-  flex-direction: column;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .roadmap-box {
   flex-grow: 1;
@@ -45,14 +52,14 @@
   min-height: 2rem;
   position: relative;
   display: flex;
-  justify-content: space-around;
-  align-content: center;
-  flex-direction: row-reverse;
+  justify-content: space-around; 
+  
+  flex-direction: column;
   position: relative;
   margin-bottom: 1.3rem;
   scroll-snap-align: start;
   border-radius: 8px;
-  flex-wrap: wrap;
+  
   
  
 }
@@ -105,74 +112,120 @@
   display:flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: center;
-  width: 3rem;
+  justify-content: space-around;
+  flex-direction: row-reverse;
+
+  width: 100%;
   padding: .5rem 0 .5rem 0;
 }
-.summary-roudmap{
-   
-  color: var(--text-secondary);
-  font-size: 10px;
-  font-weight: 500;
-}
-.acc-btn-container{
-  display: flex;
-  margin-top: .5rem;
-}
+
+
 .timer{
   display: flex;
-  margin-top: .5rem;
-}
-.subtask-carousel {
-  position: relative;
-  max-width: 100%;
-  display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  -webkit-overflow-scrolling: touch;
-  gap: 12px;
-  scrollbar-width: none;
-}
-.subtask-carousel::-webkit-scrollbar{
-  display: none;
-}
-.subtask-card{
-  flex: 0 0 auto;
-  scroll-snap-align: start;
-  width: 8rem;
-  min-height: 4rem;
-  border-radius: 10px;
+  height: 3rem;
+  width: 5rem;
   background: var(--color-subtask);
-  border: 0.5px solid var(--glass-border);
-  box-shadow: 0 2px 6px var(--box-shadow-white);
-  display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  font-weight: 500;
   font-size: 12px;
+  border-radius: 20%;
+  letter-spacing: 1px;
   flex-direction: column;
-  margin-bottom: .8rem;
- 
 }
-.node-details{
-  overflow-x: hidden;
-  width: 10rem;
+.node-time {
+  margin-top: 4px;
 }
-.sub-node-btn-container{
+.progress-container {
   display:flex;
-  align-items: center;
-  flex-wrap: wrap;
+  width: 100%;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: .5rem;
+}
+.progress-bar{
+  height: 12px;
+  width: 80%;
+  background-color: var(--color-subtask);
+  border:  .5px solid var(--glass-border);
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+.progress-fill {
+  height: 100%;
+  width: 20%;
+  background-color: var(--color-accent);
+  filter: blur(10px);
+  transition: width 1s ease-in-out;
+}
+.progress-text {
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-bottom: .5rem;
+}
+.subtask-list{
+  display:flex;
+  flex-wrap: wrap;
   
 }
-.arrow-container {
+.subtask-item{
+  margin: .2rem 1rem .2rem 1rem;
   display: flex;
-  align-items: center;
+  padding: .2rem 0 .2rem 0;
+  font-size: 11px;
+  font-weight: 500;
+  flex-wrap: wrap;
 }
-.arrow-container-nodes{
+.roud-disabld-checkbox {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+.custom-check{
+  height: 1rem;
+  width: 1rem;
+  border: 1px solid var(--glass-border);
+  border-radius: 2px;
+  position: relative;
+  display: inline-block;
+  margin-right: .5rem;
+}
+.subtask, .subtask-text{
   display: flex;
-  width: 100%;
-  height: 2rem;
-  justify-content: center;
+  flex-wrap: wrap;
 }
+.roud-disabld-checkbox:checked +.custom-check::after {
+  content: '';
+  position: absolute;
+  left: 5px;
+  top: 1px;
+  width: 6px;
+  height: 12px;
+  border:   solid var(--color-done);
+  transform: rotate(45deg);
+  border-width:0 2px 2px 0 ;
+}
+.roud-disabld-checkbox:checked ~ .subtask-text {
+  color: var(--color-done);
+  text-decoration: line-through;
+  opacity: .5;
+}
+.roadmap-list .roadmap-node:nth-child(even) {
+  
+  align-self: flex-start;
+}
+
+.roadmap-list .roadmap-node:nth-child(odd) {
+  
+  align-self: flex-end;
+}
+
+
+
+
+
   
   
