--- a/css/buttons.css
+++ b/css/buttons.css
@@ -240,7 +240,7 @@
     
     color: var(--color-text-primary);
     height: 2rem;
-    width: 5rem;
+    
     border: none;
     outline: none;
     
@@ -250,14 +250,15 @@
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(10px);
     opacity: .3;
+    width: 50%;
     border-radius: 10px 0 0 0 ;
 }
 .import-btn {
-    background-color: var(--color-accent-blur);
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(10px);
+    background-color: var(--color-accent);
+    
     box-shadow: 0px 5px 10px var(--color-divider);
-    color: black;
+    color: var(--color-text-primiary-contrast);
+    width: 50%;
     border-radius: 0 10px 0 0 ;
 }
 .modal-roud-btn{
