--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -265,6 +265,8 @@
   }
   .modal-tab-bar{
     display: flex;
+    width: 100%;
+    height: 30%;
     
   }
   .new-roud-title{
@@ -355,6 +357,79 @@
   justify-content: space-between;
   align-items: center;
 }
+.import-content{
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 17rem;
+  background-color: var(--color-accent);
+  top: 19%;
+ flex-direction: column;
+  border-radius:  0 0 10px 10px;
+}
+.new-import-title {
+    display: flex;
+    width: 100%;
+    font-weight: 700;
+    margin-top: .5rem;
+    justify-content: center;
+    position: relative;
+    color: var(--color-text-primiary-contrast);
+}
+.new-import-title::after{
+    content: '';
+    position: absolute;
+    border-bottom: solid 0.5px var(--color-text-secondary-contrast);
+    width: 80%;
+    top: 1.5rem;
+    margin-top: 0.5rem;
+  }
+  .import-text{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 10%;
+    width: 100%;
+    height: 50%;
+    margin-bottom: 1rem;
+  }
+  .import-discription {
+    width: 90%;
+    height: 70%;
+    position: relative;
+    display: flex;
+    background: var(--color-accent-blur);
+    border:none; 
+    border: .5px solid var(--color-text-secondary-contrast);
+    outline: none;
+    border-radius: 5px;
+    color: var(--color-text-secondary);
+    
+  }
+
+ 
+  .import-discription::placeholder{
+    font-size: 14px;
+    display: flex;
+    font-family: "Oxanium", sans-serif;
+    font-weight: 600;
+    margin: 1rem 0 0 1rem;
+    transition: all 0.8s ease;
+  }
+  .import-discription:focus::placeholder{
+    transform: translateX(5rem);
+    opacity: 0;
+  }
+  .helper-footer{
+    margin-top: 1rem;
+    display: flex;
+    width: 100%;
+    color: var(--color-text-small);
+    font-size: 10px;
+    justify-content: center;
+    
+  }
 
 
 
