--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -446,6 +446,14 @@
     top:-.1rem;
     left: 7rem;
   }
+  .roadmap-select-bar{
+    display: flex;
+    margin-top: .5rem;
+    justify-content: center;
+  }
+  .create-modal {
+    height: 9rem;
+  }
     
 
 
