zapis do firebase

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -297,6 +297,15 @@
     height: 1.5rem;
     width: 1.5rem;
 }
+.roud-list-btns{
+    border: none;
+    outline: none;
+    background: transparent;
+    width: 1.5rem;
+    height: 1.5rem;
+    color: var(--color-text-secondary);
+    
+}
 
     
     
