--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -454,6 +454,45 @@
   .create-modal {
     height: 9rem;
   }
+  .roadmap-list-selector {
+    display: flex;
+    margin-top: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    width: 80%;
+  }
+  .roadmap-list-selector li {
+    display: flex;
+    border-radius: 8px;
+    background: var(--color-subtask);
+    flex-wrap: wrap;
+    align-content: center;
+    box-shadow: 2px 2px 10px var(--box-shadow-white);
+    height: 2.5rem;
+    border: .5px solid var(--glass-border);
+    width: 100%;
+    justify-content: space-between;
+  }
+  .roadmap-list-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+     overflow-y: auto;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+  }
+  .roadmap-list-item-text{
+    margin-left: 1rem;
+  }
+  .list-bttns {
+    display: flex;
+    margin-right: 1rem;
+    gap: 2rem;
+    flex-direction: row-reverse;
+  }
     
 
 
