--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -49,7 +49,7 @@
   background: var(--color-bg-soft);
    border: 0.5px solid var(--glass-border); 
   overflow:visible;
-  width: 20rem;
+  min-width: 14rem;
   min-height: 2rem;
   position: relative;
   display: flex;
@@ -124,19 +124,19 @@
 
 .timer{
   display: flex;
-  height: 3rem;
-  width: 5rem;
+  gap:.5rem;
   background: var(--color-subtask);
   justify-content: center;
   align-items: center;
   font-weight: 500;
   font-size: 12px;
-  border-radius: 20%;
+  border-radius: 10px;
   letter-spacing: 1px;
-  flex-direction: column;
+  padding: .2rem;
+  margin-bottom: .5rem;
   border: .5px solid var(--glass-border);
 }
-.node-time {
+.node-time,.progress-text {
   margin-top: 4px;
 }
 .progress-container {
@@ -165,9 +165,10 @@
 }
 .progress-text {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   letter-spacing: 1px;
-  margin-bottom: .5rem;
+  display: flex;
+  
 }
 .subtask-list{
   display:flex;
@@ -507,14 +508,18 @@
     margin-left: 1rem;
   }
   .disabled-node {
-    opacity: .5;
-    filter: grayscale(.8);
+    opacity: .2;
+    filter: grayscale(1);
     pointer-events: none;
     width:auto;
     min-width: 10rem;
     min-height: 4rem;
-    
   }
+  .disabled-node .node-acc-btn{
+    pointer-events: all;
+  }
+
+    
     
 
 
